# Anomaly-Detector

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  HybrydAnomalyDetector.cpp  HybrydAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  csv_table.txt  main.cpp  minCircle.cpp  minCircle.h  testFile1.csv  testTImeSeries.cpp  testTImeSeries.h  testTimeSeries.cpp  testTimeSeries.h  timeseries.cpp  timeseries.h  trainFile1.csv
